2023-08-12T16:20:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5842317595 # 692
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 216 464 / 222 473
* notice: next accum: outdated-unq outdated-all / unq all: 217 466 / 222 474
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-07-29] / [2023-08-12]

2023-08-12T08:19:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5840303616 # 691
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 216 464 / 221 472
* notice: next accum: outdated-unq outdated-all / unq all: 216 464 / 222 473
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-12]

2023-08-12T01:12:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5838502279 # 690
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 213 459 / 221 472
* notice: next accum: outdated-unq outdated-all / unq all: 216 464 / 221 472
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2023-07-28] / [2023-07-29]

2023-08-11T01:13:50Z: