@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-12T16:20:19Z",
+  "timestamp" : "2023-08-13T01:17:50Z",
   "count_outdated" : 466,
   "uniques_outdated" : 217,
-  "count" : 474,
-  "uniques" : 222,
+  "count" : 475,
+  "uniques" : 223,
   "clones" : [
     {
       "timestamp": "2023-07-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -46,6 +46,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
