@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-07-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -25,6 +25,11 @@
     {
       "timestamp": "2023-08-12T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
