@@ -1,3 +1,12 @@
+2023-08-13T01:17:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5844528329 # 693
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-13
+* notice: last 14d: unq all: 2 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 217 466 / 222 474
+* notice: next accum: outdated-unq outdated-all / unq all: 217 466 / 223 475
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-30 2023-08-13]
+
 2023-08-12T16:20:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5842317595 # 692
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
